update side component visibility fix

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -20,6 +20,11 @@
         justify-content: center;
         font-size: calc(10px + 2vmin);
         color: $dark;
+
+        &-sided {
+
+            flex-direction: row;
+        }
     }
     &--link {
         color: $cyan;
